--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
     "@ant-design/icons": "^4.6.2",
     "antd": "^4.13.1",
     "axios": "^0.21.1",
-    "firebase": "^8.3.2",
+    "babel": "^6.23.0",
+    "firebase": "^8.6.7",
     "moment": "^2.29.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^2.1.8",
-    "sass": "^1.32.8",
-    "web-vitals": "^1.0.1"
+    "react-scripts": "^4.0.3",
+    "sass": "^1.35.1",
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,17 +50,17 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-router": "^5.1.13",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.1.2",
+    "@testing-library/user-event": "^13.1.9",
+    "@types/jest": "^26.0.19",
+    "@types/node": "^12.0.12",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.7",
+    "@types/react-router": "^5.1.15",
     "@types/react-router-dom": "^5.1.7",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
+    "@typescript-eslint/eslint-plugin": "^4.27.0",
+    "@typescript-eslint/parser": "^4.18.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
@@ -69,6 +70,6 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "2.2.1",
-    "typescript": "^4.2.3"
+    "typescript": "^4.3.3"
   }
 }
